# diablerie

./: .gitignore  .nvimrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  baseline-avx.csv  baseline-avx2.csv  baseline-neon.csv  baseline-sse2.csv  cabal.project  diablerie.cabal  linterieur.cabal
bench/: Main.hs  Naive.hs
cbits/: count-bits.c  count-bytes.c  count-eq.c  find-first-block.c  find-first-byte.c  find-first-eq.c  find-first-gt.c  find-first-lt.c  find-first-match.c  find-first-ne.c  find-last-byte.c  find-last-eq-x86.c  find-last-eq.c
cbits/aarch64/: count-eq.c  find-first-gt.c  find-first-match.c  find-first-ne.c  find-last-eq.c
cbits/x86/: count-eq.c  find-first-gt.c  find-first-match.c  find-first-ne.c
src/Data/ByteArray/: Interieur.hs
src/Data/Diablerie/: Byte.hs  ByteArray.hs  Sequence.hs  Swar.hs
src/Data/Interieur/: ByteArray.hs
test/properties/: CountEq.hs  FindFirstGt.hs  FindFirstLt.hs  FindFirstMatch.hs  FindFirstNe.hs  FindLastEq.hs  Main.hs
