cabal-version:      3.0
name:               diablerie
version:            1.0
synopsis:           Basic byte bashing you were missing.
description:
  A collection of fast, byte-level intrinsic operations. Focused on clarity and
  portability.

homepage:           https://github.com/kozross/diablerie
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/diablerie/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.5 || ==9.0.1
build-type:         Simple
extra-source-files:
  bench-data/big.txt
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules:
    Data.Diablerie.Byte
    Data.Diablerie.Sequence
    Data.Diablerie.Swar

  build-depends:
    , base       >=4.12    && <5
    , primitive  ^>=0.7.2.0

  if (arch(x86_64) || arch(i386))
    c-sources:
      cbits/find-first-eq.c
      cbits/find-first-lt.c
      cbits/x86/count-eq.c
      cbits/x86/find-first-gt.c
      cbits/x86/find-first-match.c
      cbits/x86/find-first-ne.c
      cbits/x86/find-last-eq.c

  elif arch(aarch64)
    c-sources:
      cbits/aarch64/count-eq.c
      cbits/aarch64/find-first-gt.c
      cbits/aarch64/find-first-match.c
      cbits/aarch64/find-last-eq.c
      cbits/find-first-eq.c
      cbits/find-first-lt.c
      cbits/find-first-ne.c

  else
    c-sources:
      cbits/count-eq.c
      cbits/find-first-eq.c
      cbits/find-first-gt.c
      cbits/find-first-lt.c
      cbits/find-first-match.c
      cbits/find-first-ne.c
      cbits/find-last-eq.c

  cc-options:      -O2
  hs-source-dirs:  src

-- Tests

test-suite properties
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    CountEq
    FindFirstGt
    FindFirstLt
    FindFirstMatch
    FindFirstNe
    FindLastEq

  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , diablerie
    , primitive
    , QuickCheck        ^>=2.14.2
    , split             ^>=0.2.3.4
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/properties

-- Benches

benchmark benches
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  ghc-options:    -rtsopts
  other-modules:  Naive
  build-depends:
    , base
    , diablerie
    , primitive
    , tasty-bench  ^>=0.3

  hs-source-dirs: bench
