cabal-version:      3.0
name:               linterieur
version:            1.0.0
synopsis:           Basic byte bashing you were missing.
description:
  A collection of fast, byte-level intrinsic operations. Focused on clarity and
  portability.

homepage:           https://github.com/kozross/linterieur
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/linterieur/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3 || ==9.0.1
build-type:         Simple
extra-source-files:
  bench-data/big.txt
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-language: Haskell2010

-- Flags

flag legacy-sse
  description:
    Force the use of SSE even when AVX is available. This is mostly
    for testing, or in cases where you want either this library, or stuff linked
    against it, to be usable on x86 systems which don't support AVX despite
    building on systems which do. This will force a performance loss, so don't use
    this flag unless you seriously know what you're doing.

  default:     False

-- Library

library
  import:          lang
  exposed-modules: Data.Interieur.ByteArray
  build-depends:
    , base       >=4.12    && <5
    , primitive  ^>=0.7.1.0

  c-sources:
    cbits/count-bits.c
    cbits/count-bytes.c
    cbits/find-first-block.c
    cbits/find-first-byte.c
    cbits/find-last-byte.c

  if (os(osx) && flag(legacy-sse))
    cc-options: -march=native -O2 -DLINTERIEUR_LEGACY_SSE -DLINTERIEUR_MAC

  elif os(osx)
    cc-options: -march=native -O2 -DLINTERIEUR_MAC

  elif flag(legacy-sse)
    cc-options: -march=native -O2 -DLINTERIEUR_LEGACY_SSE

  else
    cc-options: -march=native -O2

  hs-source-dirs:  src

-- Benches

benchmark benches
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Naive
  build-depends:
    , base
    , bytestring   ^>=0.11.1.0
    , linterieur
    , primitive
    , tasty-bench  ^>=0.2.5
    , tasty-hunit  ^>=0.10.0.3

  hs-source-dirs: bench
