cabal-version:      3.0
name:               linterieur
version:            1.0.0
synopsis:           Basic byte bashing you were missing.
description:
  A collection of fast, byte-level intrinsic operations. Focused on clarity and
  portability.

homepage:           https://github.com/kozross/linterieur
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/linterieur/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3 || ==9.0.1
build-type:         Simple
extra-source-files:
  bench-data/big.txt
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules: Data.Interieur.ByteArray
  build-depends:
    , base       >=4.12    && <5
    , primitive  ^>=0.7.1.0

  c-sources:
    cbits/count-bytes.c
    cbits/find-first-byte.c
    cbits/find-first-gt.c
    cbits/find-last-byte.c

  cc-options:      -O2
  hs-source-dirs:  src

-- Benches

benchmark benches
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Naive
  build-depends:
    , base
    , bytestring   ^>=0.11.1.0
    , linterieur
    , primitive
    , tasty-bench  ^>=0.3
    , tasty-hunit  ^>=0.10.0.3

  hs-source-dirs: bench
