cabal-version:      3.0
name:               linterieur
version:            1.0.0
synopsis:           Basic byte bashing you were missing.
description:
  A collection of fast, byte-level intrinsic operations. Focused on clarity and
  portability.

homepage:           https://github.com/kozross/linterieur
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/linterieur/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.5 || ==9.0.1
build-type:         Simple
extra-source-files:
  bench-data/big.txt
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules: Data.Interieur.ByteArray
  build-depends:
    , base       >=4.12    && <5
    , primitive  ^>=0.7.1.0

  if (arch(x86_64) || arch(i386))
    c-sources:
      cbits/count-bytes.c
      cbits/find-first-eq.c
      cbits/find-first-gt.c
      cbits/find-last-eq-x86.c

  else
    c-sources:
      cbits/count-bytes.c
      cbits/find-first-eq.c
      cbits/find-first-gt.c
      cbits/find-last-eq.c

  cc-options:      -O2
  hs-source-dirs:  src

-- Tests

test-suite properties
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    FindFirstGt
    FindLastEq

  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , linterieur
    , nonempty-vector   ^>=0.2.1.0
    , primitive
    , QuickCheck        ^>=2.14.2
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/properties

-- Benches

benchmark benches
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  ghc-options:    -rtsopts
  other-modules:  Naive
  build-depends:
    , base
    , linterieur
    , primitive
    , tasty-bench  ^>=0.3

  hs-source-dirs: bench
